--- a/ItsPanel_gadget/pages/pagea.html
+++ b/ItsPanel_gadget/pages/pagea.html
@@ -17,7 +17,7 @@
 <div class="cm"><a href="../bin/os/hosts_edit.bat" target="_parent"><img src="../icons/hostsedit.png" alt="hosts edit"></a></div>
 <div class="clear"></div>
 <div class="cm"><a href="../bin/dl/defrag.bat" target="_parent"><img src="../icons/ausdiskdefrag.png" alt="Auslogics Disk Defrag"></a></div>
-<div class="cm"><a href="../bin/dl/ThumbsCleaner.bat" target="_parent"><img src="../icons/ThumbsCleaner.png" alt="Auslogics Disk Defrag"></a></div>
+<div class="cm"><a href="../bin/dl/ThumbsCleaner.bat" target="_parent"><img src="../icons/ThumbsCleaner.png" alt="Thumbnail Database Cleaner"></a></div>
 
 <div class="clear"></div>
 <div class="cm"><a href="../programs/UnlockerPortable/UnlockerPortable.exe" target="_parent"><img src="../icons/unlocker.png" alt="Unlocker"></a></div>
