--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -29,6 +29,6 @@
 <div class="cm"><a href="../bin/c/LPTTestUtility.bat" target="_parent"><img src="../icons/LPTTestUtility.png" alt="LPTTestUtility"></a></div>
 <div class="cm"><a href="../bin/willem.bat" target="_parent"><img src="../icons/willem.png" alt="Willem"></a></div>
 
-
+<div class="cm"><a href="../bin/avrdudeprog.bat" target="_parent"><img src="../icons/avrdudeprog.png" alt="AVRDUDEPROG"></a></div>
 
 </div></div></div></div></body></html>
