--- a/ItsPanel_gadget/pages/page7.html
+++ b/ItsPanel_gadget/pages/page7.html
@@ -36,6 +36,11 @@
 <div class="clear"></div>
 
 <div class="cm"><a href="../bin/retro/3DMark2001SE_Win7.bat" target="_parent"><img src="../icons/retro/3DMark2001SE.png" alt="3DMark2001SE"></a></div>
+<div class="clear"></div>
+<div class="null"><img src="-.png" alt=""></a></div>
+<div class="clear"></div>
+<div class="cm"><a href="../bin/c/MSIAfterburner.bat" target="_parent"><img src="../icons/MSIAfterburner.png" alt="MSI Afterburner"></a></div>
+
 
 
 </div></div></div></div></body></html>
