--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -20,7 +20,7 @@
 
 <!--<div class="cm"><a href="../bin/ffox.bat" target="_parent"><img src="../icons/ffox.png" alt="Firefox"></a></div>-->
 <div class="cm"><a href="../bin/thunderbird.bat" target="_parent"><img src="../icons/thunderbird.png" alt="Mozilla Thunderbird"></a></div>
-<div class="cm"><a href="../bin/opera9.bat" target="_parent"><img src="../icons/opera55.png" alt="Opera L"></a></div>
+<div class="cm"><a href="../bin/operal.bat" target="_parent"><img src="../icons/opera55.png" alt="Opera L"></a></div>
 <div class="cm"><a href="G:\Programs\ProgramsW\Opera\Opera12\opera12.bat" target="_parent"><img src="../icons/opera12.png" alt="Opera 12"></a></div>
 <div class="cm"><a href="../bin/opera9.bat" target="_parent"><img src="../icons/opera9.png" alt="Opera 9"></a></div>
 <div class="cm"><a href="G:\Programs\portableapps.com\PortableApps\FileZillaPortable\FileZillaPortable.exe" target="_parent"><img src="../icons/fz.ico" alt="FileZilla Client"></a></div>
