--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -68,6 +68,12 @@
 <!--<div class="cm"><a href="R:\btc\btc-min.bat" target="_parent"><img src="../icons/bc.png" alt="Bitcoin"></a></div>-->
 <div class="cm"><a href="../bin/transmission.bat" target="_parent"><img src="../icons/transmission.ico" alt="Transmission"></a></div>
 <div class="cm"><a href="../bin/skype.bat" target="_parent"><img src="../icons/skype.png" alt="Skype"></a></div>
+
+<div class="null"><img src="-.png" alt=""></a></div>
+<div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
+<div class="cm"><a href="../bin/c/ummy.bat" target="_parent"><img src="../icons/48x48/ummy.png" alt="UmmyVideoDownloader"></a></div>
+
+
 <div class="clear"></div>
 <div class="cm"><a href="../bin/svegas.bat" target="_parent"><img src="../icons/svegas.png" alt="VegasPro12-x64"></a></div>
 <div class="clear"></div>
