--- a/ItsPanel_gadget/pages/page9.html
+++ b/ItsPanel_gadget/pages/page9.html
@@ -19,6 +19,9 @@
 
 <div id="textm">
 
+
+<a href="../bin/kp/tskill_mpc_hc64.bat">tskill mpc-hc64</a>
+<br>
 <a href="../bin/kp/tskill_kmplayer.bat">tskill kmplayer</a>
 <br>
 <a href="../bin/kp/tskill_pnzcl.bat">tskill pnzcl</a>
