--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -12,7 +12,7 @@
 
 <div class="cm"><a href="../bin/freemind.bat" target="_parent"><img src="../icons/FreeMind.png" alt="FreeMind"></a></div>
 
-
+<div class="cm"><a href="../bin/operal.bat" target="_parent"><img src="../icons/opera55.png" alt="Opera L"></a></div>
 
 <!--<div class="cm"><a href="G:\home\Documents\Projects\0-MyFirefox\FirefoxPortable\ff.bat" target="_parent"><img src="../icons/ffox2.png" alt="Firefox"></a></div>-->
 <div class="cm"><a href="G:\home\Documents\Projects\0-MyFirefox\FirefoxPortable_x64\FirefoxPortableRun.bat" target="_parent"><img src="../icons/ffox2.png" alt="Firefox"></a></div>
@@ -20,9 +20,10 @@
 
 <!--<div class="cm"><a href="../bin/ffox.bat" target="_parent"><img src="../icons/ffox.png" alt="Firefox"></a></div>-->
 <div class="cm"><a href="../bin/thunderbird.bat" target="_parent"><img src="../icons/thunderbird.png" alt="Mozilla Thunderbird"></a></div>
-<div class="cm"><a href="../bin/operal.bat" target="_parent"><img src="../icons/opera55.png" alt="Opera L"></a></div>
-<div class="cm"><a href="G:\Programs\ProgramsW\Opera\Opera12\opera12.bat" target="_parent"><img src="../icons/opera12.png" alt="Opera 12"></a></div>
-<div class="cm"><a href="../bin/opera9.bat" target="_parent"><img src="../icons/opera9.png" alt="Opera 9"></a></div>
+
+<!--<div class="cm"><a href="G:\Programs\ProgramsW\Opera\Opera12\opera12.bat" target="_parent"><img src="../icons/opera12.png" alt="Opera 12"></a></div>-->
+<!--<div class="cm"><a href="../bin/opera9.bat" target="_parent"><img src="../icons/opera9.png" alt="Opera 9"></a></div>-->
+
 <div class="cm"><a href="G:\Programs\portableapps.com\PortableApps\FileZillaPortable\FileZillaPortable.exe" target="_parent"><img src="../icons/fz.ico" alt="FileZilla Client"></a></div>
 <div class="cm"><a href="../bin/gnucash.bat" target="_parent"><img src="../icons/gnucash-icon-48x48.png" alt="GnuCash Free Finance Manager"></a></div>
 <div class="cm"><a href="../bin/gwhere.bat" target="_parent"><img src="../icons/gwhere.png" alt="GWhere"></a></div>
