--- a/ItsPanel_gadget/pages/pagea.html
+++ b/ItsPanel_gadget/pages/pagea.html
@@ -46,5 +46,8 @@
 
 
 <div class="cm"><a href="../bin/c/ChangeUPS.bat" target="_parent"><img src="../icons/ChangeUPS.png" alt="Выбрать ИБП (UPS)"></a></div>
+<div class="cm"><a href="../bin/procexp64.bat" target="_parent"><img src="../icons/48x48/procexp64.png" alt="ProcessExplorer"></a></div>
+
+
 
 </div></div></div></div></body></html>
