--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -31,6 +31,11 @@
 
 <div class="cm"><a href="../bin/avrdudeprog.bat" target="_parent"><img src="../icons/avrdudeprog.png" alt="AVRDUDEPROG"></a></div>
 
+<div class="cm"><a href="../bin/avuniprog.bat" target="_parent"><img src="../icons/48x48/dosboxsvnd.png" alt="AUniProg"></a></div>
+
+
+
+
 <div class="clear"></div>
 
 <div class="cm"><a href="../bin/g/Denisenko.bat" target="_parent"><img src="../icons/48x48/Denisenko.png" alt="Denisenko"></a></div>
