--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -31,7 +31,7 @@
 
 <div class="cm"><a href="../bin/avrdudeprog.bat" target="_parent"><img src="../icons/avrdudeprog.png" alt="AVRDUDEPROG"></a></div>
 
-<div class="cm"><a href="../bin/avuniprog.bat" target="_parent"><img src="../icons/48x48/dosboxsvnd.png" alt="AUniProg"></a></div>
+<div class="cm"><a href="../bin/uniprog.bat" target="_parent"><img src="../icons/48x48/dosboxsvnd.png" alt="AUniProg"></a></div>
 
 
 
