--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -41,4 +41,13 @@
 <div class="clear"></div>
 <div class="cm"><a href="../bin/winff.bat" target="_parent"><img src="../icons/winff.png" alt="WinFF"></a></div>
 
+<div class="clear"></div>
+<div class="cm"><a href="../bin/fony.bat" target="_parent"><img src="../icons/48x48/Fony.png" alt="Fony"></a></div>
+
+
+
+
+
+
+
 </div></div></div></div></body></html>
