--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -30,6 +30,11 @@
 
 <div class="cm"><a href="../bin/avrdudeprog.bat" target="_parent"><img src="../icons/avrdudeprog.png" alt="AVRDUDEPROG"></a></div>
 
+<div class="cm"><a href="../bin/g/AvrStudio4.bat" target="_parent"><img src="../icons/AvrStudio4.png" alt="AvrStudio4"></a></div>
+
+
+
+
 <div class="cm"><a href="../bin/uniprog.bat" target="_parent"><img src="../icons/48x48/dosboxsvnd.png" alt="UniProg"></a></div>
 
 
