--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -64,14 +64,30 @@
 <div class="cm"><a href="../bin/ner1xbr.bat" target="_parent"><img src="../icons/ner1x.png" alt="Nero Burning ROM"></a></div>
 <div class="cm"><a href="../bin/clonecd.bat" target="_parent"><img src="../icons/clonecd.png" alt="CloneCD"></a></div>
 <div class="cm"><a href="../bin/isomaster.bat" target="_parent"><img src="../icons/isomaster.png" alt="ISO Master"></a></div>
+
+
+
+<div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
+
+
+<div class="cm"><a href="../bin/g/d2.bat" target="_parent"><img src="../icons/48x48/d2.png" alt=""></a></div>
+
+
+
 <div class="clear"></div>
+
+
+
+
+
+
+
 <div class="cm"><a href="../bin/utorrent.bat" target="_parent"><img src="../icons/utorrent.png" alt="uTorrent"></a></div>
 <!--<div class="cm"><a href="R:\btc\btc-min.bat" target="_parent"><img src="../icons/bc.png" alt="Bitcoin"></a></div>-->
 <div class="cm"><a href="../bin/transmission.bat" target="_parent"><img src="../icons/transmission.ico" alt="Transmission"></a></div>
 <div class="cm"><a href="../bin/skype.bat" target="_parent"><img src="../icons/skype.png" alt="Skype"></a></div>
 
-<div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
-<div class="cm"><a href="../bin/skype.bat" target="_parent"><img src="../icons/48x48/d2.png" alt="Skype"></a></div>
+
 
 
 
