--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -40,7 +40,11 @@
 
 
 <div class="clear"></div>
-<div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/keepass.png" alt="KeePass"></a></div>
+
+
+<!--<div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/keepass.png" alt="KeePass"></a></div>-->
+<div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/48x48/keepass_b.png" alt="KeePass"></a></div>
+
 <!--<div class="cm"><a href="G:\Programs\portableapps.com\StartPortableApps.exe" target="_parent"><img src="../icons/PortableApps.png" alt="PortableApps"></a></div>-->
 <div class="cm"><a href="../bin/portableapps.bat" target="_parent"><img src="../icons/PortableApps.png" alt="PortableApps"></a></div>
 <div class="cm"><a href="../bin/calc2.bat" target="_parent"><img src="../icons/calc2.png" alt="Calculator"></a></div>
