--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -16,7 +16,7 @@
 <div class="cm"><a href="../bin/quartus9.bat" target="_parent"><img src="../icons/quartus.png" alt="quartus 91sp2"></a></div>
 <div class="cm"><a href="../bin/calculator2006.bat" target="_parent"><img src="../icons/calculator2006.png" alt="calculator2006"></a></div>
 <div class="cm"><a href="../bin/g/Denisenko.bat" target="_parent"><img src="../icons/48x48/Denisenko.png" alt="Denisenko"></a></div>
-<div class="cm"><a href="../bin/c/pulseview.bat" target="_parent"><img src="../icons/48x48/pulseview.png" alt="PulseView"></a></div>
+
 
 
 <div class="clear"></div>
@@ -47,9 +47,9 @@
 
 <div class="clear"></div>
 <div class="cm"><a href="../bin/fony.bat" target="_parent"><img src="../icons/48x48/Fony.png" alt="Fony"></a></div>
+<div class="clear"></div>
 
-
-
+<div class="cm"><a href="../bin/c/pulseview.bat" target="_parent"><img src="../icons/48x48/pulseview.png" alt="PulseView"></a></div>
 
 
 
