--- a/ItsPanel_gadget/pages/page6.html
+++ b/ItsPanel_gadget/pages/page6.html
@@ -49,6 +49,7 @@
 <div class="cm"><a href="../bin/fony.bat" target="_parent"><img src="../icons/48x48/Fony.png" alt="Fony"></a></div>
 <div class="clear"></div>
 
+<div class="null"><img src="-.png" alt=""></a></div>
 <div class="cm"><a href="../bin/c/pulseview.bat" target="_parent"><img src="../icons/48x48/pulseview.png" alt="PulseView"></a></div>
 
 
