--- a/ItsPanel_gadget/pages/page7.html
+++ b/ItsPanel_gadget/pages/page7.html
@@ -26,12 +26,25 @@
 <div class="clear"></div>
 <div class="cm"><a href="../bin/alcohol52.bat" target="_parent"><img src="../icons/alcohol52.png" alt="Alcohol 52"></a></div>
 <div class="cm"><a href="../bin/bloody3.bat" target="_parent"><img src="../icons/bloody.png" alt="Bloody3"></a></div>
-<div class="cm"><a href="../bin/vertical_mouse.bat" target="_parent"><img src="../icons/48x48/vertical_mouse.png" alt="Bloody3"></a></div>
+<div class="cm"><a href="../bin/vertical_mouse.bat" target="_parent"><img src="../icons/48x48/vertical_mouse.png" alt="Vertical Mouse Titan"></a></div>
 
 <div class="clear"></div>
+
+
 
 <div class="null"><img src="-.png" alt=""></a></div>
+
+
 <div class="clear"></div>
+
+<div class="cm"><a href="../bin/x360ce.bat" target="_parent"><img src="../icons/48x48/x360ce.png" alt="x360ce"></a></div>
+
+
+<div class="cm"><a href="../bin/os/joy.bat" target="_parent"><img src="../icons/48x48/x360ce.png" alt="joy.cpl"></a></div>
+
+
+
+
 <div class="null"><img src="-.png" alt=""></a></div>
 <div class="clear"></div>
 <div class="null"><img src="-.png" alt=""></a></div>
