--- a/ItsPanel_gadget/pages/pagea.html
+++ b/ItsPanel_gadget/pages/pagea.html
@@ -49,5 +49,7 @@
 <div class="cm"><a href="../bin/procexp64.bat" target="_parent"><img src="../icons/48x48/procexp64.png" alt="ProcessExplorer"></a></div>
 
 
+<div class="clear"></div>
+<div class="cm"><a href="../bin/drw_dir.bat" target="_parent"><img src="../icons/48x48/folder_drw.png" alt="drw"></a></div>
 
 </div></div></div></div></body></html>
