--- a/ItsPanel_gadget/pages/page4.html
+++ b/ItsPanel_gadget/pages/page4.html
@@ -15,9 +15,11 @@
 <div class="cm"><a href="../bin/xampp-control.bat" target="_parent"><img src="../icons/xampp.png" alt="XAMPP Control Panel"></a></div>
 <div class="cm"><a href="../bin/xampp_htdocs.bat" target="_parent"><img src="../icons/fol_net.png" alt="xampp htdocs"></a></div>
 
+<div class="clear"></div>
+<div class="null"><img src="-.png" alt=""></a></div>
+<div class="clear"></div>
 
-
-
+<div class="cm"><a href="../bin/tcc/raven-qt.bat" target="_parent"><img src="../icons/48x48/raven.png" alt="Raven Core"></a></div>
 
 
 
