--- a/ItsPanel_gadget/pages/page7.html
+++ b/ItsPanel_gadget/pages/page7.html
@@ -56,6 +56,6 @@
 <div class="clear"></div>
 <div class="cm"><a href="../bin/c/MSIAfterburner.bat" target="_parent"><img src="../icons/MSIAfterburner.png" alt="MSI Afterburner"></a></div>
 
-
+<div class="cm"><a href="../bin/c/ThunderMaster.bat" target="_parent"><img src="../icons/48x48/ThunderMaster.png" alt="Thunder Master"></a></div>
 
 </div></div></div></div></body></html>
