--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -12,7 +12,10 @@
 
 <div class="cm"><a href="../bin/freemind.bat" target="_parent"><img src="../icons/FreeMind.png" alt="FreeMind"></a></div>
 
-<div class="cm"><a href="../bin/operal.bat" target="_parent"><img src="../icons/opera55.png" alt="Opera L"></a></div>
+<div class="cm"><a href="../bin/operal.bat" target="_parent"><img src="../icons/48x48/opera/opera55.png" alt="Opera L"></a></div>
+
+<div class="cm"><a href="../bin/operagx.bat" target="_parent"><img src="../icons/48x48/opera/operagx.png" alt="OperaGX"></a></div>
+
 
 <!--<div class="cm"><a href="G:\home\Documents\Projects\0-MyFirefox\FirefoxPortable\ff.bat" target="_parent"><img src="../icons/ffox2.png" alt="Firefox"></a></div>-->
 <div class="cm"><a href="G:\home\Documents\Projects\0-MyFirefox\FirefoxPortable_x64\FirefoxPortableRun.bat" target="_parent"><img src="../icons/ffox2.png" alt="Firefox"></a></div>
