--- a/ItsPanel_gadget/pages/page7.html
+++ b/ItsPanel_gadget/pages/page7.html
@@ -51,11 +51,31 @@
 <div class="clear"></div>
 
 <div class="cm"><a href="../bin/retro/3DMark2001SE_Win7.bat" target="_parent"><img src="../icons/retro/3DMark2001SE.png" alt="3DMark2001SE"></a></div>
+
+<div class="null"><img src="-.png" alt=""></a></div>
+
+<div class="cm"><a href="../bin/c/FurMark.bat" target="_parent"><img src="../icons/48x48/furmark48.png" alt="FurMark"></a></div>
+
+
+
+
+
+
 <div class="clear"></div>
 <div class="null"><img src="-.png" alt=""></a></div>
+
+
+
+
+
 <div class="clear"></div>
 <div class="cm"><a href="../bin/c/MSIAfterburner.bat" target="_parent"><img src="../icons/MSIAfterburner.png" alt="MSI Afterburner"></a></div>
 
 <div class="cm"><a href="../bin/c/ThunderMaster.bat" target="_parent"><img src="../icons/48x48/ThunderMaster.png" alt="Thunder Master"></a></div>
+
+<div class="null"><img src="-.png" alt=""></a></div>
+
+<div class="cm"><a href="../bin/c/gpuz.bat" target="_parent"><img src="../icons/48x48/gpuz.png" alt="GPU-Z"></a></div>
+
 
 </div></div></div></div></body></html>
