--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -115,4 +115,11 @@
 <div class="cm"><a href="../bin/c/beeline3g.bat" target="_parent"><img src="../icons/beeline3g.ico" alt="USB-модем Билайн"></a></div>
 <div class="cm"><a href="../bin/c/PlayMemoriesHome.bat" target="_parent"><img src="../icons/PlayMemoriesHome.png" alt="PlayMemories Home"></a></div>
 
+
+<div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
+
+
+<div class="cm"><a href="../bin/g/Victoria454.bat" target="_parent"><img src="../icons/48x48/victoria32.png" alt="Victoria4.54"></a></div>
+
+
 </div></div></div></div></body></html>
