--- a/ItsPanel_gadget/pages/page4.html
+++ b/ItsPanel_gadget/pages/page4.html
@@ -12,6 +12,12 @@
 
 <div class="cm"><a href="../bin/os/ncpa.bat" target="_parent"><img src="../icons/package_network.png" alt="Сетевые подключения"></a></div>
 <div class="clear"></div>
+
+<div class="cm"><a href="../bin/c/ptnvn.bat" target="_parent"><img src="../icons/48x48/ptnvn.png" alt="Сетевые подключения"></a></div>
+<div class="clear"></div>
+
+
+
 <div class="cm"><a href="../bin/xampp-control.bat" target="_parent"><img src="../icons/xampp.png" alt="XAMPP Control Panel"></a></div>
 <div class="cm"><a href="../bin/xampp_htdocs.bat" target="_parent"><img src="../icons/fol_net.png" alt="xampp htdocs"></a></div>
 
