--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -53,7 +53,7 @@
 <div class="cm"><a href="../bin/kmp300.bat" target="_parent"><img src="../icons/kmp.png" alt="The KMPlayer 3.0.0"></a></div>
 -->
 <div class="cm"><a href="../bin/atmc.bat" target="_parent"><img src="../icons/atmc.png" alt="TotalMedia Theatre"></a></div>
-<div class="cm"><a href="../bin/mpc-hc.bat" target="_parent"><img src="../icons/mpc-hc.png" alt="MPC-HC"></a></div>
+<!--<div class="cm"><a href="../bin/mpc-hc.bat" target="_parent"><img src="../icons/mpc-hc.png" alt="MPC-HC"></a></div>-->
 <div class="cm"><a href="../bin/mpc-hc64.bat" target="_parent"><img src="../icons/mpc-hc.png" alt="MPC-HC x64"></a></div>
 
 
