--- a/ItsPanel_gadget/pages/page4.html
+++ b/ItsPanel_gadget/pages/page4.html
@@ -25,14 +25,20 @@
 <div class="null"><img src="-.png" alt=""></a></div>
 <div class="clear"></div>
 
-<div class="cm"><a href="../bin/tcc/raven-qt.bat" target="_parent"><img src="../icons/48x48/raven.png" alt="Raven Core"></a></div>
+<div class="cm"><a href="../bin/tcc/raven-qt.bat" target="_parent"><img src="../icons/48x48/raven.png" alt="Rаven Core"></a></div>
+
+<div class="cm"><a href="../bin/c/cc/exds.bat" target="_parent"><img src="../icons/48x48/exds.png" alt="Exodus"></a></div>
+
+
 
 <div class="null"><img src="-.png" alt=""></a></div>
 <div class="clear"></div>
 
+<!--
 <div class="cm"><a href="../bin/c/TeamViewer.bat" target="_parent"><img src="../icons/48x48/TeamViewer.png" alt="TeamViewer"></a></div>
+-->
 
-
+<div class="cm"><a href="../bin/c/AnDsk.bat" target="_parent"><img src="../icons/48x48/AnDsk.png" alt="AnyDеsk"></a></div>
 
 
 </div></div></div></div></body></html>
