--- a/ItsPanel_gadget/pages/page9.html
+++ b/ItsPanel_gadget/pages/page9.html
@@ -29,6 +29,9 @@
 <br>
 <a href="../bin/kp/tskill_pnzcl.bat">tskill pnzcl</a>
 
+<br>
+<a href="../bin/kp/tskill_calc.bat">tskill calc</a>
+
 
 </div>
 
