--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -14,6 +14,9 @@
 
 <div class="cm"><a href="../bin/operagx.bat" target="_parent"><img src="../icons/48x48/opera/operagx.png" alt="OperaGX"></a></div>
 
+<div class="cm"><a href="../bin/vivaldi.bat" target="_parent"><img src="../icons/48x48/opera/vivaldi.png" alt="Vivaldi"></a></div>
+
+
 <div class="null"><img src="-.png" alt=""></a></div>
 
 <!--
