--- a/ItsPanel_gadget/pages/pagea.html
+++ b/ItsPanel_gadget/pages/pagea.html
@@ -15,6 +15,10 @@
 <div class="cm"><a href="../programs/AquaKeyTest/AquaKeyTest.exe" target="_parent"><img src="../icons/AquaKeyTest.png" alt="AquaKeyTest"></a></div>
 
 <div class="cm"><a href="../bin/os/hosts_edit.bat" target="_parent"><img src="../icons/hostsedit.png" alt="hosts edit"></a></div>
+
+
+<div class="cm"><a href="../bin/c/c11/csm_s.bat" target="_parent"><img src="../icons/48x48/Open-Shell.png" alt="hosts edit"></a></div>
+
 <div class="clear"></div>
 <div class="cm"><a href="../bin/dl/defrag.bat" target="_parent"><img src="../icons/ausdiskdefrag.png" alt="Auslogics Disk Defrag"></a></div>
 <div class="cm"><a href="../bin/dl/ThumbsCleaner.bat" target="_parent"><img src="../icons/ThumbsCleaner.png" alt="Thumbnail Database Cleaner"></a></div>
