--- a/ItsPanel_gadget/pages/pageb.html
+++ b/ItsPanel_gadget/pages/pageb.html
@@ -18,9 +18,12 @@
 <div id="fcpanel">
 
 <div class="sy32"><a href="../bin/os/devmgmt.bat" target="_parent"><img src="cpanel/hardware.png" alt=""><div>Диспетчер устройств</div></a></div>
-<div class="sy32"><a href="#" target="_parent"><img src="cpanel/autorun.png" alt=""><div>Автозапуск носителей</div></a></div>
 <div class="sy32"><a href="paged.html" target="_parent"><img src="cpanel/kcontrol.png" alt=""><div>Администрирование</div></a></div>
-<div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Восстановление</div></a></div>
+<div class="sy32"><a href="../bin/os/compmgmt.bat" target="_parent"><img src="cpanel/b.png" alt=""><div>Управление компьютером</div></a></div>
+
+<div class="sy32"><a href="#" target="_parent"><img src="cpanel/autorun.png" alt=""><div>Автозапуск носителей</div></a></div>
+
+
 <div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Гаджеты</div></a></div>
 
 <div class="sy32"><a href="../bin/os/mmsys.bat" target="_parent"><img src="cpanel/speaker.png" alt=""><div>Звук</div></a></div>
