--- a/ItsPanel_gadget/pages/paged.html
+++ b/ItsPanel_gadget/pages/paged.html
@@ -17,6 +17,10 @@
 
 <div id="fcpanel">
 
+<!--<div class="sy32"><a href="../bin/os/compmgmt.bat" target="_parent"><img src="cpanel/b.png" alt=""><div>Управление компьютером</div></a></div>-->
+
+<div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Восстановление</div></a></div>
+
 <div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Windows PowerShell Modules</div></a></div>
 <div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Брандмауэр в реж. повыш. безопасности</div></a></div>
 <div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Инициатор iSCSI</div></a></div>
@@ -35,7 +39,7 @@
 </div>
 <div id="scpanel">
 
-<div class="sy32"><a href="../bin/os/compmgmt.bat" target="_parent"><img src="cpanel/b.png" alt=""><div>Управление компьютером</div></a></div>
+
 <div class="sy32"><a href="#" target="_parent"><img src="cpanel/b.png" alt=""><div>Управление печатью</div></a></div>
 
 
