--- a/ItsPanel_gadget/pages/page2.html
+++ b/ItsPanel_gadget/pages/page2.html
@@ -14,8 +14,9 @@
 
 <table  border="0" cellspacing="0" cellpadding="0"  class="inteltable">
 
-<tr>1
-<td>
+<tr><div class="cm"><a href="../bin/folders/root.{20D04FE0-3AEA-1069-A2D8-08002B30309D}" target="_parent"><img src="../icons/system.png" alt="Система"></a></div>
+
+<td><div class="cm"><a href="../bin/folders/root.{20D04FE0-3AEA-1069-A2D8-08002B30309D}" target="_parent"><img src="../icons/system.png" alt="Система"></a></div>
 1a
 </td>
 
@@ -25,7 +26,7 @@
 
 </tr>
 
-<tr>2
+<tr><div class="cm"><a href="../bin/folders/root.{20D04FE0-3AEA-1069-A2D8-08002B30309D}" target="_parent"><img src="../icons/system.png" alt="Система"></a></div>2
 <td> 2a
 </td></tr>
 
