--- a/ItsPanel_gadget/pages/page3.bak.html
+++ b/ItsPanel_gadget/pages/page3.bak.html
@@ -10,11 +10,6 @@
 <iframe id="fmenu" src="../menu/mmenu.html" scrolling="no" frameborder="0"></iframe>
 <div id="block1"></div><div id="mf1"><div id="mf2"><div id="mf3"><div id="menu">
 
-
-
-
-<div class="cm"><a href="../bin/os/cmd.bat" target="_parent"><img src="../icons/cmd.png" alt="cmd"></a></div>
-
 <div class="cm"><a href="../bin/freemind.bat" target="_parent"><img src="../icons/FreeMind.png" alt="FreeMind"></a></div>
 
 <div class="cm"><a href="../bin/operagx.bat" target="_parent"><img src="../icons/48x48/opera/operagx.png" alt="OperaGX"></a></div>
@@ -52,8 +47,6 @@
 
 <div class="clear"></div>
 
-<div class="cm"><a href="../bin/os/calc.bat" target="_parent"><img src="../icons/win/calc7.png" alt="Калькулятор"></a></div>
-
 <div class="cm"><a href="../bin/foobar2000.bat" target="_parent"><img src="../icons/foobar2000.png" alt="foobar2000"></a></div>
 
 <div class="cm"><a href="../bin/spider.bat" target="_parent"><img src="../icons/spider.png" alt="Spider Player"></a></div>
@@ -69,7 +62,6 @@
 
 <div class="clear"></div>
 
-<div class="cm"><a href="../bin/os/mspaint.bat" target="_parent"><img src="../icons/mspaint.png" alt="Paint"></a></div>
 
 <!--<div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/keepass.png" alt="KeePass"></a></div>-->
 <div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/48x48/keepass_b.png" alt="KeePass"></a></div>
@@ -85,15 +77,8 @@
 <div class="cm"><a href="../bin/icofx.bat" target="_parent"><img src="../icons/icofx.png" alt="IcoFX"></a></div>
 <div class="cm"><a href="../bin/gimp.bat" target="_parent"><img src="../icons/gimp.png" alt="GNU Image Manipulation Program"></a></div>
 <div class="cm"><a href="../bin/inkscape.bat" target="_parent"><img src="../icons/inkscape.png" alt="Inkscape"></a></div>
-
+<div class="cm"><a href="../bin/konvert.bat" target="_parent"><img src="../icons/konvert.png" alt="Konvert 1.3"></a></div>
 <div class="clear"></div>
-
-
-
-
-
-<div class="cm"><a href="../bin/os/notepad.bat" target="_parent"><img src="../icons/win/notepad.png" alt="Блокнот"></a></div>
-
 <div class="cm"><a href="../bin/notepad++.bat" target="_parent"><img src="../icons/nplpl.png" alt="Notepad++ x64"></a></div>
 <div class="cm"><a href="../bin/far.bat" target="_parent"><img src="../icons/far.ico" alt="Far"></a></div>
 <div class="cm"><a href="../bin/spad.bat" target="_parent"><img src="../icons/spad.png" alt="Superpad by Demjanishin Vladislav"></a></div>
@@ -101,14 +86,11 @@
 <div class="cm"><a href="../bin/Kurkulator.bat" target="_parent"><img src="../icons/Kurkulator.png" alt="Kurkulator"></a></div>
 
 <div class="clear"></div>
-
-<div class="cm"><a href="../bin/os/ie.bat" target="_parent"><img src="../icons/ie.png" alt="Internet Explorer"></a></div>
-
 <div class="cm"><a href="../bin/ner1xbr.bat" target="_parent"><img src="../icons/ner1x.png" alt="Nero Burning ROM"></a></div>
 <div class="cm"><a href="../bin/clonecd.bat" target="_parent"><img src="../icons/clonecd.png" alt="CloneCD"></a></div>
 <div class="cm"><a href="../bin/isomaster.bat" target="_parent"><img src="../icons/isomaster.png" alt="ISO Master"></a></div>
 
-<div class="cm"><a href="../bin/konvert.bat" target="_parent"><img src="../icons/konvert.png" alt="Konvert 1.3"></a></div>
+
 
 <div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
 
@@ -122,7 +104,7 @@
 
 
 
-<div class="cm"><a href="../bin/os/osk.bat" target="_parent"><img src="../icons/win/osk.png" alt="Экранная клавиатура"></a></div>
+
 
 
 <div class="cm"><a href="../bin/utorrent.bat" target="_parent"><img src="../icons/utorrent.png" alt="uTorrent"></a></div>
@@ -135,21 +117,13 @@
 
 
 <div class="null"><img src="-.png" alt=""></a></div>
-<div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
+<div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div><div class="null"><img src="-.png" alt=""></a></div>
 <div class="cm"><a href="../bin/c/ummy.bat" target="_parent"><img src="../icons/48x48/ummy.png" alt="UmmyVideoDownloader"></a></div>
 
 
 <div class="clear"></div>
-
-<div class="cm"><a href="../bin/os/sndvol.bat" target="_parent"><img src="../icons/sndvol.png" alt="Громкость"></a></div>
-
-
 <div class="cm"><a href="../bin/svegas.bat" target="_parent"><img src="../icons/svegas.png" alt="VegasPro12-x64"></a></div>
 <div class="clear"></div>
-
-<div class="cm"><a href="../bin/folders/trash.{645FF040-5081-101B-9F08-00AA002F954E}" target="_parent"><img src="../icons/trash.png" alt="Корзина"></a></div>
-
-
 <div class="cm"><a href="../bin/c/epsonscan.bat" target="_parent"><img src="../icons/epsonscan.png" alt="EpsonScan"></a></div>
 <div class="cm"><a href="../bin/c/beeline3g.bat" target="_parent"><img src="../icons/beeline3g.ico" alt="USB-модем Билайн"></a></div>
 <div class="cm"><a href="../bin/c/PlayMemoriesHome.bat" target="_parent"><img src="../icons/PlayMemoriesHome.png" alt="PlayMemories Home"></a></div>
