--- a/ItsPanel_gadget/pages/page0.html
+++ b/ItsPanel_gadget/pages/page0.html
@@ -30,7 +30,7 @@
 
 
 
-<div class="cm"><a href="../bin/os/cmd.bat" target="_parent"><img src="../icons/cmd.png" alt="Система"></a></div>
+<div class="cm"><a href="../bin/os/cmd.bat" target="_parent"><img src="../icons/cmd.png" alt="cmd"></a></div>
 <div class="cm"><a href="../bin/os/calc.bat" target="_parent"><img src="../icons/win/calc7.png" alt="Калькулятор"></a></div>
 <div class="cm"><a href="../bin/os/osk.bat" target="_parent"><img src="../icons/win/osk.png" alt="Экранная клавиатура"></a></div>
 
