--- a/ItsPanel_gadget/pages/page1.html
+++ b/ItsPanel_gadget/pages/page1.html
@@ -9,8 +9,12 @@
 <body>
 <iframe id="fmenu" src="../menu/mmenu.html" scrolling="no" frameborder="0"></iframe>
 
-
 <div id="block1"></div><div id="mf1"><div id="mf2"><div id="mf3"><div id="menu">
+
+
+<div class="cm"><a href="G:\home\Internet" target="_parent"><img src="../icons/folders/folder_remote.png" alt="Сохранённые страницы"></a></div>
+<div class="null"><img src="-.png" alt=""></a></div>
+
 
 
 <div class="cm"><a href="T:\Media" target="_parent"><img src="../icons/folders/folder_video.png" alt="Видео
@@ -27,7 +31,7 @@
 <div class="cm"><a href="G:\home\Media\MyMusic" target="_parent"><img src="../icons/folders/folder_sound.png" alt="Музыка
 "></a></div>
 
-<div class="cm"><a href="G:\home\Internet" target="_parent"><img src="../icons/folders/folder_remote.png" alt="Сохранённые страницы"></a></div>
+
 <div class="cm"><a href="T:\Torrents" target="_parent"><img src="../icons/folder_torrents.png" alt="Торренты"></a></div>
 
 <div class="clear"></div><div id="m2s"><a href="pagee.html"><img src="../menu/a.png" alt=""></a></div>
