--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -52,7 +52,10 @@
 
 <div class="clear"></div>
 
-<div class="cm"><a href="../bin/os/calc.bat" target="_parent"><img src="../icons/win/calc7.png" alt="Калькулятор"></a></div>
+<!--<div class="cm"><a href="../bin/os/calc.bat" target="_parent"><img src="../icons/win/calc7.png" alt="Калькулятор"></a></div>-->
+<div class="cm"><a href="../bin/g/desktop/OldClassicCalc.bat" target="_parent"><img src="../icons/win/calc7.png" alt="Калькулятор"></a></div>
+
+
 
 <div class="cm"><a href="../bin/foobar2000.bat" target="_parent"><img src="../icons/foobar2000.png" alt="foobar2000"></a></div>
 
