--- a/ItsPanel_gadget/pages/page0.html
+++ b/ItsPanel_gadget/pages/page0.html
@@ -40,6 +40,19 @@
 <div class="cm"><a href="../bin/os/sndvol.bat" target="_parent"><img src="../icons/sndvol.png" alt="Громкость"></a></div>
 <div class="clear"></div>
 <div class="cm"><a href="../bin/folders/trash.{645FF040-5081-101B-9F08-00AA002F954E}" target="_parent"><img src="../icons/trash.png" alt="Корзина"></a></div>
+
+
+
+<div class="clear"></div>
+
+
+
+
+
+<div class="cm"><a href="../bin/os/notepad.bat" target="_parent"><img src="../icons/win/notepad.png" alt="Блокнот"></a></div>
+
+
+
 <div class="clear"></div>
 
 
