--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -73,7 +73,9 @@
 
 <div class="clear"></div>
 
-<div class="cm"><a href="../bin/os/mspaint.bat" target="_parent"><img src="../icons/mspaint.png" alt="Paint"></a></div>
+<div class="cm"><a href="../bin/g/desktop/paint.bat" target="_parent"><img src="../icons/mspaint.png" alt="Classic Paint (Windows 7)"></a></div>
+
+
 
 <!--<div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/keepass.png" alt="KeePass"></a></div>-->
 <div class="cm"><a href="G:\home\DB\KeePass\KeePassPortable\kpp.bat" target="_parent"><img src="../icons/48x48/keepass_b.png" alt="KeePass"></a></div>
@@ -96,7 +98,7 @@
 
 
 
-<div class="cm"><a href="../bin/os/notepad.bat" target="_parent"><img src="../icons/win/notepad.png" alt="Блокнот"></a></div>
+<div class="cm"><a href="../bin/g/desktop/notepad.bat" target="_parent"><img src="../icons/winxp/notepad.png" alt="Блокнот Windows XP"></a></div>
 
 <div class="cm"><a href="../bin/notepad++.bat" target="_parent"><img src="../icons/nplpl.png" alt="Notepad++ x64"></a></div>
 <div class="cm"><a href="../bin/far.bat" target="_parent"><img src="../icons/far.ico" alt="Far"></a></div>
