--- a/ItsPanel_gadget/pages/page1.html
+++ b/ItsPanel_gadget/pages/page1.html
@@ -11,8 +11,12 @@
 
 <div id="block1"></div><div id="mf1"><div id="mf2"><div id="mf3"><div id="menu">
 
+<div class="cm"><a href="G:\home\Documents" target="_parent"><img src="../icons/folders/folder_html.png" alt="Документы"></a></div>
+
 <div class="cm"><a href="G:\home\Documents\Projects" target="_parent"><img src="../icons/folders/folder_p.png" alt="Проекты
 "></a></div>
+
+<div class="null"><img src="-.png" alt=""></a></div>
 
 <div class="cm"><a href="G:\home\Internet" target="_parent"><img src="../icons/folders/folder_remote.png" alt="Сохранённые страницы"></a></div>
 <div class="null"><img src="-.png" alt=""></a></div>
@@ -25,7 +29,7 @@
 
 <div class="null"><img src="-.png" alt=""></a></div>
 
-<div class="cm"><a href="G:\home\Documents" target="_parent"><img src="../icons/folders/folder_html.png" alt="Документы"></a></div>
+
 
 <div class="cm"><a href="G:\home\Media\Мои рисунки" target="_parent"><img src="../icons/folders/folder_image.png" alt="Изображения
 "></a></div>
