--- a/ItsPanel_gadget/pages/page3.html
+++ b/ItsPanel_gadget/pages/page3.html
@@ -62,7 +62,7 @@
 
 <div class="cm"><a href="../bin/foobar2000.bat" target="_parent"><img src="../icons/foobar2000.png" alt="foobar2000"></a></div>
 
-<div class="cm"><a href="../bin/spider.bat" target="_parent"><img src="../icons/spider.png" alt="Spider Player"></a></div>
+<!--<div class="cm"><a href="../bin/spider.bat" target="_parent"><img src="../icons/spider.png" alt="Spider Player"></a></div>-->
 
 <div class="cm"><a href="../bin/mpc-be.bat" target="_parent"><img src="../icons/48x48/mpc-be.png" alt="MPC-BE x64"></a></div>
 <div class="cm"><a href="../bin/mpc-hc64.bat" target="_parent"><img src="../icons/48x48/mpc-hc.png" alt="MPC-HC x64"></a></div>
