--- a/ItsPanel_gadget/pages/page0.html
+++ b/ItsPanel_gadget/pages/page0.html
@@ -41,7 +41,7 @@
 <div class="clear"></div>
 <div class="cm"><a href="../bin/folders/trash.{645FF040-5081-101B-9F08-00AA002F954E}" target="_parent"><img src="../icons/trash.png" alt="Корзина"></a></div>
 
-
+<div class="cm"><a href="../bin/os/WDTS.bat" target="_parent"><img src="../icons/48x48/bd.png" alt="защитник"></a></div>
 
 <div class="clear"></div>
 
